Add YouTube, Teammates and contac sections.

--- a/LandingPageTFG.html
+++ b/LandingPageTFG.html
@@ -11,59 +11,137 @@
     <title>TFG</title>
 </head>
 <body>
+  <!--Area de logo-->
     <div class="px-4 py-5 my-5 text-center">
-        <img class="d-block mx-auto rounded-circle" src="./images/Logo.jpg" alt="Logo TFG" width="220" height="220">
-        <h1 class="display-5 fw-bold">Nombre del TFG</h1>
+        <img class="d-block mx-auto rounded-circle" src="./images/logoNN-01.png" alt="Logo TFG" width="440" height="247.5">
+        <!--La altura representa el 56.25% del ancho-->
+        <h2 class="display-5 fw-bold">Nombre del TFG</h2>
         <div class="col-lg-6 mx-auto">
           <p class="lead mb-4">Descrición del TFG</p>
         </div>
     </div>
+  <!--Fin area del logo-->
     <hr/>
-    <!--Div padre-->
+  <!--Area de YouTube-->
+    <div style="background-color: #D9C5B4;" class="container col-xxl-8 px-4 py-5">
+      <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
+        <div class="col-10 col-sm-8 col-lg-6">
+          <video  class="d-block mx-lg-auto" autoplay loop width="500" height="300" muted controls>
+            <source src="./videos/WhatsApp Video 2022-02-23 at 21.23.48.mp4" type="video/webm" />
+          </video>
+        </div>
+        <div class="col-lg-6">
+          <h2 class="display-5 fw-bold lh-1 mb-3">YouTube <i class="bi bi-youtube"></i></h2>
+          <p class="lead">Descripción del canal y algo que poner...</p>
+        </div>
+        <div class="d-grid gap-2 d-md-flex justify-content-md-start">
+          <a role="button" class="btn btn-outline-danger" aria-disabled="true" style="text-decoration: none;" href="https://www.youtube.com/">Suscribete</a>
+        </div>
+      </div>
+    </div>
+    <!--Fin del area de Youtube-->
+    <hr/>
+    <!--Div padre Ig y Tiktok-->
       <div style="width: 100%;" class="d-md-flex flex-md-equal my-md-3 ps-md-3">
         <!--Instagram area-->
-        <div style="width: 50%;" class="bg-dark me-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center text-white overflow-hidden">
+        <div class="me-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center text-white overflow-hidden CardStyle">
 
           <div class="my-3 py-3">
             <h2 class="display-4">Instagram <i class="bi bi-instagram"></i></h2>
-            <a href="https://www.instagram.com/?hl=es" style="color: white;" class="lead NoLink">@TFG2022_ig</a>
+            <a href="https://www.instagram.com/?hl=es" class="lead NoLink">@TFG2022_ig</a>
           </div>
 
-          <div class="bg-light shadow-sm mx-auto overflow-hidden" style="width: 70%; height: 400px; border-radius: 21px 21px 21px 21px; margin-bottom: 10px;">
-            <video style=" object-fit: cover; border-radius: 21px 21px 21px 21px;" autoplay loop width="90%" height="90%" muted>
-              <source src="./videos/WhatsApp Video 2022-02-23 at 21.23.48.mp4" style="margin-top: 20px" type="video/mp4">
+          <div class="MarginVideoStyle shadow-sm mx-auto overflow-hidden">
+            <video style=" object-fit: cover; border-radius: 21px 21px 21px 21px; margin-top: 5%;" autoplay loop width="90%" height="90%" muted>
+              <source src="./videos/WhatsApp Video 2022-02-23 at 21.23.48.mp4" type="video/mp4">
           </div>
         </div>
-
 <!--Tiktok area-->
-        <div style="width: 50%;" class="bg-light me-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden">
-          <div class="my-3 p-3">
-            <h2 class="display-5">Tiktok <i class="bi bi-tiktok"></i></h2>
-            <a href="https://www.tiktok.com/es/" style="color: black;" class="lead NoLink">@TFG2022_tiktok</a>
-          </div>
-          <!--Div del telefono-->
+        <div class="me-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center text-white overflow-hidden CardStyle">
 
-          <div class="col">
-            <div class="card-cover overflow-hidden bg-dark rounded-5 shadow-lg">
-              <video style="object-fit: cover; margin-top: 20px;" autoplay loop width="250" height="400" muted>
-                <source src="./videos/WhatsApp Video 2022-02-23 at 21.23.48.mp4" type="video/mp4"></video>  
-              <div class="d-flex flex-column h-100 p-5 pb-3 text-white text-shadow-1">
-                <h2 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">Algo que poner</h2>
-                <ul class="d-flex list-unstyled mt-auto">
-                  <li class="me-auto">
-                    <img src="./images/tiktokLogo.png" alt="Logo tiktok" width="32" height="32" class="rounded-circle border border-white">
-                  </li>
-                  <li class="d-flex align-items-center me-3">
-                    <svg class="bi me-2" width="1em" height="1em"><use xlink:href="#geo-fill"></use></svg>
-                    <small>Algo que poner</small>
-                  </li>
-                </ul>
-              </div>
-            
-            </div>
+          <div class="my-3 py-3">
+            <h2 class="display-4">Tik Tok <i class="bi bi-tiktok"></i></h2>
+            <a href="https://www.tiktok.com/es/" class="lead NoLink">@TFG2022_tiktok</a>
+          </div>
+
+          <div class="MarginVideoStyle shadow-sm mx-auto overflow-hidden">
+            <video style=" object-fit: cover; border-radius: 21px 21px 21px 21px; margin-top: 5%;" autoplay loop width="90%" height="90%" muted>
+            <source src="./videos/WhatsApp Video 2022-02-23 at 21.23.48.mp4" type="video/mp4">
           </div>
         </div>
         <!--Fin div padre-->
+      </div>
+      <hr/>
+
+      <h2 class="display-5 fw-bold text-center">Nuestro equipo</h2>
+
+      <div class="row row-cols-1 row-cols-md-3 g-4 text-center"> 
+        <div class="col-lg-4">
+          <img src="./images/Logo.jpg" class="bd-placeholder-img rounded-circle" style="width: 80px; height: 80px;" alt="Foto de perfil"> 
+          <h4>Nombre y Apellido</h4>
+          <p>Rol</p>
+        </div>
+
+        <div class="col-lg-4">
+          <img src="./images/Logo.jpg" class="bd-placeholder-img rounded-circle" style="width: 80px; height: 80px;" alt="Foto de perfil"> 
+          <h4>Nombre y Apellido</h4>
+          <p>Rol</p>
+        </div>
+
+        <div class="col-lg-4">
+          <img src="./images/Logo.jpg" class="bd-placeholder-img rounded-circle" style="width: 80px; height: 80px;" alt="Foto de perfil"> 
+          <h4>Nombre y Apellido</h4>
+          <p>Rol</p>
+        </div>
+
+        <div class="col-lg-4">
+          <img src="./images/Logo.jpg" class="bd-placeholder-img rounded-circle" style="width: 80px; height: 80px;" alt="Foto de perfil"> 
+          <h4>Nombre y Apellido</h4>
+          <p>Rol</p>
+        </div>
+
+        <div class="col-lg-4">
+          <img src="./images/Logo.jpg" class="bd-placeholder-img rounded-circle" style="width: 80px; height: 80px;" alt="Foto de perfil"> 
+          <h4>Nombre y Apellido</h4>
+          <p>Rol</p>
+        </div>
+
+        <div class="col-lg-4">
+          <img src="./images/Logo.jpg" class="bd-placeholder-img rounded-circle" style="width: 80px; height: 80px;" alt="Foto de perfil"> 
+          <h4>Nombre y Apellido</h4>
+          <p>Rol</p>
+        </div>
+
+        <div class="col-lg-4">
+          <img src="./images/Logo.jpg" class="bd-placeholder-img rounded-circle" style="width: 80px; height: 80px;" alt="Foto de perfil"> 
+          <h4>Nombre y Apellido</h4>
+          <p>Rol</p>
+        </div>
+
+        <div class="col-lg-4">
+          <img src="./images/Logo.jpg" class="bd-placeholder-img rounded-circle" style="width: 80px; height: 80px;" alt="Foto de perfil"> 
+          <h4>Nombre y Apellido</h4>
+          <p>Rol</p>
+        </div>
+
+        <div class="col-lg-4">
+          <img src="./images/Logo.jpg" class="bd-placeholder-img rounded-circle" style="width: 80px; height: 80px;" alt="Foto de perfil"> 
+          <p>Nombre y Apellido</p>
+          <span>Rol</span>
+        </div>
+      </div>
+      
+      <div class="container">
+        <footer style="height: 100px;" class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
+          <div class="col-md-4 d-flex align-items-center">
+            <span class="text-muted">© 2021 TFG, UNAV</span>
+          </div>
+          <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
+            <li class="ms-3"><a class="text-muted" href="https://www.tiktok.com/es/"><i class="bi bi-tiktok"></i></a></li>
+            <li class="ms-3"><a class="text-muted" href="https://www.instagram.com/?hl=es"><i class="bi bi-instagram"></i></a></li>
+            <li class="ms-3"><a class="text-muted" href="https://www.youtube.com/"><i class="bi bi-youtube"></i></a></li>
+          </ul>
+        </footer>
       </div>
 
 
