--- a/LandingPageTFG.html
+++ b/LandingPageTFG.html
@@ -12,9 +12,9 @@
 </head>
 <body>
   <!--Area de logo-->
-    <div class="px-4 py-5 my-5 text-center">
+    <div id="StyleLogoArea" class="px-4 py-5 my-5 text-center w-full">
         <img class="d-block mx-auto rounded-circle" src="./images/logoNN-01.png" alt="Logo TFG" width="440" height="247.5">
-        <!--La altura representa el 56.25% del ancho-->
+        <!--stLa altura representa el 56.25% del ancho-->
         <h2 class="display-5 fw-bold">Nombre del TFG</h2>
         <div class="col-lg-6 mx-auto">
           <p class="lead mb-4">Descrición del TFG</p>
