--- a/LandingPageTFG.html
+++ b/LandingPageTFG.html
@@ -7,48 +7,51 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
     <link rel="stylesheet" href="./LandingPage.css">
+    <link rel="shortcut icon" href="./images/favicon.ico">
 
-    <title>TFG</title>
+    <title>Nexus Noticias</title>
 </head>
 <body>
-  <!--Area de logo-->
-    <div id="StyleLogoArea" class="px-4 py-5 my-5 text-center w-full">
+<!--Area de logo-->
+    <div id="StyleLogoArea" class="px-4 py-5 text-center w-full">
         <img class="d-block mx-auto rounded-circle" src="./images/logoNN-01.png" alt="Logo TFG" width="440" height="247.5">
         <!--stLa altura representa el 56.25% del ancho-->
-        <h2 class="display-5 fw-bold">Nombre del TFG</h2>
+        <h2 class="display-5 fw-bold">Nexus Noticias</h2>
         <div class="col-lg-6 mx-auto">
           <p class="lead mb-4">Descrición del TFG</p>
         </div>
     </div>
-  <!--Fin area del logo-->
+<!--Fin area del logo-->
     <hr/>
-  <!--Area de YouTube-->
-    <div style="background-color: #D9C5B4;" class="container col-xxl-8 px-4 py-5">
-      <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
-        <div class="col-10 col-sm-8 col-lg-6">
-          <video  class="d-block mx-lg-auto" autoplay loop width="500" height="300" muted controls>
-            <source src="./videos/WhatsApp Video 2022-02-23 at 21.23.48.mp4" type="video/webm" />
-          </video>
+<!--Area de YouTube-->
+    <div class="w-full" style="background-color: brown; padding-top: 1.5rem; padding-bottom: 1.5rem;">
+      <div style="background-color: antiquewhite; border-radius: 15px 15px 15px 15px;" class="col-xxl-8 py-5 container">
+        <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
+          <div class="col-10 col-sm-8 col-lg-6">
+            <video  class="d-block mx-lg-auto" autoplay loop width="500" height="300" muted controls>
+              <source src="./videos/WhatsApp Video 2022-02-23 at 21.23.48.mp4" type="video/webm" />
+            </video>
+          </div>
+          <div style="padding-left: 3rem; padding-top: 4rem;"  class="col-lg-6">
+            <h2 class="display-5 fw-bold lh-1 mb-3">YouTube <i class="bi bi-youtube"></i></h2>
+            <p class="lead">Descripción del canal y algo que poner...</p>
+          </div>
+          <div style="padding-left: 3rem;" class="d-grid gap-2 d-md-flex justify-content-md-start">
+            <a role="button" class="btn btn-outline-danger" aria-disabled="true" style="text-decoration: none;" href="https://m.youtube.com/channel/UC_h14e1yoj0yTUUYUu7c9Bg">Suscribete</a>
+          </div>
         </div>
-        <div class="col-lg-6">
-          <h2 class="display-5 fw-bold lh-1 mb-3">YouTube <i class="bi bi-youtube"></i></h2>
-          <p class="lead">Descripción del canal y algo que poner...</p>
-        </div>
-        <div class="d-grid gap-2 d-md-flex justify-content-md-start">
-          <a role="button" class="btn btn-outline-danger" aria-disabled="true" style="text-decoration: none;" href="https://www.youtube.com/">Suscribete</a>
-        </div>
-      </div>
+      </div>  
     </div>
-    <!--Fin del area de Youtube-->
+<!--Fin del area de Youtube-->
     <hr/>
-    <!--Div padre Ig y Tiktok-->
+<!--Div padre Ig y Tiktok-->
       <div style="width: 100%;" class="d-md-flex flex-md-equal my-md-3 ps-md-3">
         <!--Instagram area-->
-        <div class="me-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center text-white overflow-hidden CardStyle">
+        <div class="me-md-3 pt-md-5 px-md-5 text-center text-white overflow-hidden CardStyle">
 
           <div class="my-3 py-3">
             <h2 class="display-4">Instagram <i class="bi bi-instagram"></i></h2>
-            <a href="https://www.instagram.com/?hl=es" class="lead NoLink">@TFG2022_ig</a>
+            <a href="https://instagram.com/nexusnoticias?utm_medium=copy_link" class="lead NoLink">@nexusnoticias</a>
           </div>
 
           <div class="MarginVideoStyle shadow-sm mx-auto overflow-hidden">
@@ -57,19 +60,20 @@
           </div>
         </div>
 <!--Tiktok area-->
-        <div class="me-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center text-white overflow-hidden CardStyle">
+        <div class="me-md-3 pt-md-5 px-md-5 text-center text-white overflow-hidden CardStyle">
 
           <div class="my-3 py-3">
             <h2 class="display-4">Tik Tok <i class="bi bi-tiktok"></i></h2>
-            <a href="https://www.tiktok.com/es/" class="lead NoLink">@TFG2022_tiktok</a>
+            <a href="https://vm.tiktok.com/ZMLSCurop/" class="lead NoLink">@nexusnoticias</a>
           </div>
 
           <div class="MarginVideoStyle shadow-sm mx-auto overflow-hidden">
             <video style=" object-fit: cover; border-radius: 21px 21px 21px 21px; margin-top: 5%;" autoplay loop width="90%" height="90%" muted>
             <source src="./videos/WhatsApp Video 2022-02-23 at 21.23.48.mp4" type="video/mp4">
           </div>
+<!--Fin area de TikTok-->
         </div>
-        <!--Fin div padre-->
+<!--Fin div padre-->
       </div>
       <hr/>
 
@@ -77,55 +81,55 @@
 
       <div class="row row-cols-1 row-cols-md-3 g-4 text-center"> 
         <div class="col-lg-4">
-          <img src="./images/Logo.jpg" class="bd-placeholder-img rounded-circle" style="width: 80px; height: 80px;" alt="Foto de perfil"> 
+          <img src="./images/avatar.png" class="bd-placeholder-img rounded-circle" style="width: 80px; height: 80px;" alt="Foto de perfil"> 
           <h4>Nombre y Apellido</h4>
           <p>Rol</p>
         </div>
 
         <div class="col-lg-4">
-          <img src="./images/Logo.jpg" class="bd-placeholder-img rounded-circle" style="width: 80px; height: 80px;" alt="Foto de perfil"> 
+          <img src="./images/avatar.png" class="bd-placeholder-img rounded-circle" style="width: 80px; height: 80px;" alt="Foto de perfil"> 
           <h4>Nombre y Apellido</h4>
           <p>Rol</p>
         </div>
 
         <div class="col-lg-4">
-          <img src="./images/Logo.jpg" class="bd-placeholder-img rounded-circle" style="width: 80px; height: 80px;" alt="Foto de perfil"> 
+          <img src="./images/avatar.png" class="bd-placeholder-img rounded-circle" style="width: 80px; height: 80px;" alt="Foto de perfil"> 
           <h4>Nombre y Apellido</h4>
           <p>Rol</p>
         </div>
 
         <div class="col-lg-4">
-          <img src="./images/Logo.jpg" class="bd-placeholder-img rounded-circle" style="width: 80px; height: 80px;" alt="Foto de perfil"> 
+          <img src="./images/avatar.png" class="bd-placeholder-img rounded-circle" style="width: 80px; height: 80px;" alt="Foto de perfil"> 
           <h4>Nombre y Apellido</h4>
           <p>Rol</p>
         </div>
 
         <div class="col-lg-4">
-          <img src="./images/Logo.jpg" class="bd-placeholder-img rounded-circle" style="width: 80px; height: 80px;" alt="Foto de perfil"> 
+          <img src="./images/avatar.png" class="bd-placeholder-img rounded-circle" style="width: 80px; height: 80px;" alt="Foto de perfil"> 
           <h4>Nombre y Apellido</h4>
           <p>Rol</p>
         </div>
 
         <div class="col-lg-4">
-          <img src="./images/Logo.jpg" class="bd-placeholder-img rounded-circle" style="width: 80px; height: 80px;" alt="Foto de perfil"> 
+          <img src="./images/avatar.png" class="bd-placeholder-img rounded-circle" style="width: 80px; height: 80px;" alt="Foto de perfil"> 
           <h4>Nombre y Apellido</h4>
           <p>Rol</p>
         </div>
 
         <div class="col-lg-4">
-          <img src="./images/Logo.jpg" class="bd-placeholder-img rounded-circle" style="width: 80px; height: 80px;" alt="Foto de perfil"> 
+          <img src="./images/avatar.png" class="bd-placeholder-img rounded-circle" style="width: 80px; height: 80px;" alt="Foto de perfil"> 
           <h4>Nombre y Apellido</h4>
           <p>Rol</p>
         </div>
 
         <div class="col-lg-4">
-          <img src="./images/Logo.jpg" class="bd-placeholder-img rounded-circle" style="width: 80px; height: 80px;" alt="Foto de perfil"> 
+          <img src="./images/avatar.png" class="bd-placeholder-img rounded-circle" style="width: 80px; height: 80px;" alt="Foto de perfil"> 
           <h4>Nombre y Apellido</h4>
           <p>Rol</p>
         </div>
 
         <div class="col-lg-4">
-          <img src="./images/Logo.jpg" class="bd-placeholder-img rounded-circle" style="width: 80px; height: 80px;" alt="Foto de perfil"> 
+          <img src="./images/avatar.png" class="bd-placeholder-img rounded-circle" style="width: 80px; height: 80px;" alt="Foto de perfil"> 
           <p>Nombre y Apellido</p>
           <span>Rol</span>
         </div>
@@ -134,12 +138,12 @@
       <div class="container">
         <footer style="height: 100px;" class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
           <div class="col-md-4 d-flex align-items-center">
-            <span class="text-muted">© 2021 TFG, UNAV</span>
+            <span class="text-muted">© 2022 TFG, UNAV</span>
           </div>
           <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
-            <li class="ms-3"><a class="text-muted" href="https://www.tiktok.com/es/"><i class="bi bi-tiktok"></i></a></li>
-            <li class="ms-3"><a class="text-muted" href="https://www.instagram.com/?hl=es"><i class="bi bi-instagram"></i></a></li>
-            <li class="ms-3"><a class="text-muted" href="https://www.youtube.com/"><i class="bi bi-youtube"></i></a></li>
+            <li class="ms-3"><a class="text-muted" href="https://vm.tiktok.com/ZMLSCurop/"><i class="bi bi-tiktok"></i></a></li>
+            <li class="ms-3"><a class="text-muted" href="https://instagram.com/nexusnoticias?utm_medium=copy_link"><i class="bi bi-instagram"></i></a></li>
+            <li class="ms-3"><a class="text-muted" href="https://m.youtube.com/channel/UC_h14e1yoj0yTUUYUu7c9Bg"><i class="bi bi-youtube"></i></a></li>
           </ul>
         </footer>
       </div>
