Add profil photos and change the font-family to 'Lato'

--- a/LandingPageTFG.html
+++ b/LandingPageTFG.html
@@ -22,7 +22,7 @@
         </div>
     </div>
 <!--Fin area del logo-->
-    <hr/>
+
 <!--Area de YouTube-->
     <div class="w-full" style="background-color: brown; padding-top: 1.5rem; padding-bottom: 1.5rem;">
       <div style="background-color: antiquewhite; border-radius: 15px 15px 15px 15px;" class="col-xxl-8 py-5 container">
@@ -43,7 +43,7 @@
       </div>  
     </div>
 <!--Fin del area de Youtube-->
-    <hr/>
+
 <!--Div padre Ig y Tiktok-->
       <div style="width: 100%;" class="d-md-flex flex-md-equal my-md-3 ps-md-3">
         <!--Instagram area-->
@@ -75,63 +75,64 @@
         </div>
 <!--Fin div padre-->
       </div>
-      <hr/>
 
+<!--Area de perfiles-->
       <h2 class="display-5 fw-bold text-center">Nuestro equipo</h2>
 
       <div class="row row-cols-1 row-cols-md-3 g-4 text-center"> 
+        <!--#1-->
+        <div class="col-lg-4">
+          <img src="./images/Bosco_H.jpeg" class="bd-placeholder-img rounded-circle" style="width: 80px; height: 80px;" alt="Foto de perfil"> 
+          <h4>Bosco Hernández</h4>
+          <p>Redactor y presentador</p>
+        </div>
+        <!--#2-->
+        <div class="col-lg-4">
+          <img src="./images/Isabel_O.jpeg" class="bd-placeholder-img rounded-circle" style="width: 80px; height: 80px;" alt="Foto de perfil"> 
+          <h4>Isabel Ortiz</h4>
+          <p>Producción</p>
+        </div>
+        <!--#3-->
+        <div class="col-lg-4">
+          <img src="./images/Danna_V.jpeg" class="bd-placeholder-img rounded-circle" style="width: 80px; height: 80px;" alt="Foto de perfil"> 
+          <h4>Danna Varela</h4>
+          <p>Diseño de arte y producción digital</p>
+        </div>
+        <!--#4-->
+        <div class="col-lg-4">
+          <img src="./images/Gabriela_B.jpeg" class="bd-placeholder-img rounded-circle" style="width: 80px; height: 80px;" alt="Foto de perfil"> 
+          <h4>Gabriela Barreiro</h4>
+          <p>Redacción y presentación</p>
+        </div>
+        <!--#5-->
+        <div class="col-lg-4">
+          <img src="./images/avatar.png" class="bd-placeholder-img rounded-circle" style="width: 80px; height: 80px;" alt="Foto de perfil"> 
+          <h4>Carolina Vásquez</h4>
+          <p>Rol</p>
+        </div>
+        <!--#6-->
+        <div class="col-lg-4">
+          <img src="./images/Carlos_M.jpeg" class="bd-placeholder-img rounded-circle" style="width: 80px; height: 80px;" alt="Foto de perfil"> 
+          <h4>Carlos Martul</h4>
+          <p>Producción</p>
+        </div>
+        <!--#7-->
+        <div class="col-lg-4">
+          <img src="./images/Daniela_L.jpeg" class="bd-placeholder-img rounded-circle" style="width: 80px; height: 80px;" alt="Foto de perfil"> 
+          <h4>Daniela de León</h4>
+          <p>Redacción</p>
+        </div>
+        <!--#8-->
         <div class="col-lg-4">
           <img src="./images/avatar.png" class="bd-placeholder-img rounded-circle" style="width: 80px; height: 80px;" alt="Foto de perfil"> 
           <h4>Nombre y Apellido</h4>
           <p>Rol</p>
         </div>
-
+        <!--#9-->
         <div class="col-lg-4">
           <img src="./images/avatar.png" class="bd-placeholder-img rounded-circle" style="width: 80px; height: 80px;" alt="Foto de perfil"> 
           <h4>Nombre y Apellido</h4>
           <p>Rol</p>
-        </div>
-
-        <div class="col-lg-4">
-          <img src="./images/avatar.png" class="bd-placeholder-img rounded-circle" style="width: 80px; height: 80px;" alt="Foto de perfil"> 
-          <h4>Nombre y Apellido</h4>
-          <p>Rol</p>
-        </div>
-
-        <div class="col-lg-4">
-          <img src="./images/avatar.png" class="bd-placeholder-img rounded-circle" style="width: 80px; height: 80px;" alt="Foto de perfil"> 
-          <h4>Nombre y Apellido</h4>
-          <p>Rol</p>
-        </div>
-
-        <div class="col-lg-4">
-          <img src="./images/avatar.png" class="bd-placeholder-img rounded-circle" style="width: 80px; height: 80px;" alt="Foto de perfil"> 
-          <h4>Nombre y Apellido</h4>
-          <p>Rol</p>
-        </div>
-
-        <div class="col-lg-4">
-          <img src="./images/avatar.png" class="bd-placeholder-img rounded-circle" style="width: 80px; height: 80px;" alt="Foto de perfil"> 
-          <h4>Nombre y Apellido</h4>
-          <p>Rol</p>
-        </div>
-
-        <div class="col-lg-4">
-          <img src="./images/avatar.png" class="bd-placeholder-img rounded-circle" style="width: 80px; height: 80px;" alt="Foto de perfil"> 
-          <h4>Nombre y Apellido</h4>
-          <p>Rol</p>
-        </div>
-
-        <div class="col-lg-4">
-          <img src="./images/avatar.png" class="bd-placeholder-img rounded-circle" style="width: 80px; height: 80px;" alt="Foto de perfil"> 
-          <h4>Nombre y Apellido</h4>
-          <p>Rol</p>
-        </div>
-
-        <div class="col-lg-4">
-          <img src="./images/avatar.png" class="bd-placeholder-img rounded-circle" style="width: 80px; height: 80px;" alt="Foto de perfil"> 
-          <p>Nombre y Apellido</p>
-          <span>Rol</span>
         </div>
       </div>
       
