All profil photos are complete and I add 3 different user templates

--- a/LandingPageTFG.html
+++ b/LandingPageTFG.html
@@ -12,7 +12,7 @@
     <title>Nexus Noticias</title>
 </head>
 <body>
-  <header class="p-3 bg-dark text-white">
+  <header style="background-color: #191716;" class="p-3 text-white">
     <div class="container">
       <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
         <a href="/" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none">
@@ -21,33 +21,34 @@
 
         <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
           <li><a href="#" class="nav-link px-2 text-secondary">Home</a></li>
-          <li><a href="#" class="nav-link px-2 text-white">Features</a></li>
-          <li><a href="#" class="nav-link px-2 text-white">Pricing</a></li>
-          <li><a href="#" class="nav-link px-2 text-white">FAQs</a></li>
-          <li><a href="#" class="nav-link px-2 text-white">About</a></li>
+          <li><a href="#" class="nav-link px-2 text-white">YouTube</a></li>
+          <li><a href="#" class="nav-link px-2 text-white">Instagram</a></li>
+          <li><a href="#" class="nav-link px-2 text-white">TikTok</a></li>
+          <li><a href="#" class="nav-link px-2 text-white">Nosotros</a></li>
         </ul>
 
         <div class="text-end">
-          <button type="button" class="btn btn-outline-light me-2">Login</button>
-          <button type="button" class="btn btn-warning">Sign-up</button>
+          <button style="background-color: #FFB800;" type="button" class="btn">Contactanos</button>
         </div>
       </div>
     </div>
   </header>
 <!--Area de logo-->
     <div id="StyleLogoArea" class="px-4 py-5 text-center w-full">
-        <img class="d-block mx-auto rounded-circle" src="./images/logoNN-01.png" alt="Logo TFG" width="440" height="247.5">
+        <img class="d-block mx-auto rounded-circle" src="./images/logoNN-01.png" alt="Logo TFG" width="700" height="393.75">
         <!--stLa altura representa el 56.25% del ancho-->
         <h2 class="display-5 fw-bold">Nexus Noticias</h2>
         <div class="col-lg-6 mx-auto">
-          <p class="lead mb-4">Descrición del TFG</p>
+          <p style="font-size: 20px;" class="lead mb-4">Nexus es un medio de comunicación especializado en las relaciones internacionales. <br> 
+          ¿Quieres saber qué pasa al rededor del mundo y por qué? Te lo explicamos en nuestros videos. 
+          </p>
         </div>
     </div>
 <!--Fin area del logo--> 
 
 <!--Area de YouTube-->
-    <div class="w-full" style="background-color: brown; padding-top: 1.5rem; padding-bottom: 1.5rem;">
-      <div style="background-color: antiquewhite; border-radius: 15px 15px 15px 15px;" class="col-xxl-8 py-5 container">
+    <div class="w-full" style="padding-top: 1.5rem; padding-bottom: 1.5rem;">
+      <div style="border-radius: 15px 15px 15px 15px;" class="col-xxl-8 py-5 container">
         <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
           <div class="col-10 col-sm-8 col-lg-6">
             <video  class="d-block mx-lg-auto" autoplay loop width="500" height="300" muted controls>
@@ -103,63 +104,80 @@
 
       <div class="row row-cols-1 row-cols-md-3 g-4 text-center"> 
         <!--#1-->
-        <div class="col-lg-4">
-          <img src="./images/Bosco_H.jpeg" class="bd-placeholder-img rounded-circle" style="width: 80px; height: 80px;" alt="Foto de perfil"> 
-          <h4>Bosco Hernández</h4>
+        <div class="col-lg-4 text-center">
+          <img src="./images/Bosco_H.jpeg" class="bd-placeholder-img rounded-circle SizeProfilPhoto" alt="Foto de perfil"> 
+          <h4 class="fw-bold">Bosco Hernández</h4>
           <p>Redacción y presentación</p>
+          <div style="color: black; width: 65%; " class="badge text-wrap">
+            <p class="fw-light lh-sm fs14"> Redactor en el Diario de Navarra desde junio del 2021 hasta la actualidad.Interés en periodismo local e internacional, y en información deportiva. 
+              <a class="text-muted" href="https://www.linkedin.com/in/bosco-hern%C3%A1ndez-bba453208"><i class="bi bi-linkedin"></i></a>
+            </p>
+          </div>
         </div>
         <!--#2-->
         <div class="col-lg-4">
-          <img src="./images/Isabel_O.jpeg" class="bd-placeholder-img rounded-circle" style="width: 80px; height: 80px;" alt="Foto de perfil"> 
-          <h4>Isabel Ortiz</h4>
-          <p>Producción</p>
+          <img src="./images/Isabel_O.jpeg" class="bd-placeholder-img rounded-circle SizeProfilPhoto" alt="Foto de perfil"> 
+          <h4 class="fw-bold">Isabel Ortiz <a class="text-muted" href="https://www.linkedin.com/in/isabel-ortiz-caballeros-a03270148"><i class="bi bi-linkedin"></i></a></h4>
+          <p class="fst-italic">Producción</p>
+          <div style="color: black; width: 65%; " class="badge text-wrap">
+            <p class="fw-light lh-sm fs14">  Editora y communication manager en la plataforma Tenet Ideas desde marzo 2020. Interés en periodismo investigativo y producción periodística.
+            </p>
+          </div>
         </div>
         <!--#3-->
         <div class="col-lg-4">
-          <img src="./images/Danna_V.jpeg" class="bd-placeholder-img rounded-circle" style="width: 80px; height: 80px;" alt="Foto de perfil"> 
-          <h4>Danna Varela</h4>
-          <p>Diseño de arte y producción digital</p>
+         <figure>
+          <img src="./images/Danna_V.jpeg" class="bd-placeholder-img rounded-circle SizeProfilPhoto" alt="Foto de perfil"> 
+          <h4 class="fw-bold">Danna Varela</h4>
+          <p class="fs-5">Diseño de arte y producción digital</p>
+          <figcaption>
+            <div style="color: black; width: 65%; " class="badge text-wrap">
+              <p class="fw-light lh-sm fs14">  Editora y communication manager en la plataforma Tenet Ideas desde marzo 2020. Interés en periodismo investigativo y producción periodística.
+              </p>
+            </div>
+          </figcaption>
+         </figure>
         </div>
         <!--#4-->
         <div class="col-lg-4">
-          <img src="./images/Gabriela_B.jpeg" class="bd-placeholder-img rounded-circle" style="width: 80px; height: 80px;" alt="Foto de perfil"> 
+          <img src="./images/Gabriela_B.jpeg" class="bd-placeholder-img rounded-circle SizeProfilPhoto" alt="Foto de perfil"> 
           <h4>Gabriela Barreiro</h4>
           <p>Redacción y presentación</p>
         </div>
         <!--#5-->
         <div class="col-lg-4">
-          <img src="./images/Carolina_V.jpeg" class="bd-placeholder-img rounded-circle" style="width: 80px; height: 80px;" alt="Foto de perfil"> 
+          <img src="./images/Carolina_V.jpeg" class="bd-placeholder-img rounded-circle SizeProfilPhoto" alt="Foto de perfil"> 
           <h4>Carolina Vásquez</h4>
           <p>Directora</p>
         </div>
         <!--#6-->
         <div class="col-lg-4">
-          <img src="./images/Carlos_M.jpeg" class="bd-placeholder-img rounded-circle" style="width: 80px; height: 80px;" alt="Foto de perfil"> 
+          <img src="./images/Carlos_M.jpeg" class="bd-placeholder-img rounded-circle SizeProfilPhoto" alt="Foto de perfil"> 
           <h4>Carlos Martul</h4>
           <p>Producción</p>
         </div>
         <!--#7-->
         <div class="col-lg-4">
-          <img src="./images/Daniela_L.jpeg" class="bd-placeholder-img rounded-circle" style="width: 80px; height: 80px;" alt="Foto de perfil"> 
+          <img src="./images/Daniela_L.jpeg" class="bd-placeholder-img rounded-circle SizeProfilPhoto" alt="Foto de perfil"> 
           <h4>Daniela de León</h4>
           <p>Redacción</p>
         </div>
         <!--#8-->
         <div class="col-lg-4">
-          <img src="./images/avatar.png" class="bd-placeholder-img rounded-circle" style="width: 80px; height: 80px;" alt="Foto de perfil"> 
+          <img src="./images/Joaquín_L.jpeg" class="bd-placeholder-img rounded-circle SizeProfilPhoto" alt="Foto de perfil"> 
           <h4>Joaquín Llosa</h4>
           <p>Editor de vídeo y gráficos</p>
         </div>
         <!--#9-->
         <div class="col-lg-4">
-          <img src="./images/avatar.png" class="bd-placeholder-img rounded-circle" style="width: 80px; height: 80px;" alt="Foto de perfil"> 
-          <h4>Nombre y Apellido</h4>
-          <p>Rol</p>
+          <img src="./images/Ignacio_C.jpeg" class="bd-placeholder-img rounded-circle SizeProfilPhoto" alt="Foto de perfil"> 
+          <h4>Ignacio Crespo</h4>
+          <p>Redactor</p>
         </div>
       </div>
 
-
-      <div style="background-color: black; color: white; margin-bottom: -1rem;" class="w-full">
+<!--Area footer-->
+      <div style="background-color: #191716; color: white; margin-bottom: -1rem;" class="w-full">
           <h2 class="display-5 fw-bold text-center">Contactos</h2>
       </div>
 
