Change teammate's cards and apply the same format

--- a/LandingPageTFG.html
+++ b/LandingPageTFG.html
@@ -145,11 +145,11 @@
         <!--#1-->
         <div class="col-lg-4 text-center">
           <img src="./images/Bosco_H.jpeg" class="bd-placeholder-img rounded-circle SizeProfilPhoto" alt="Foto de perfil"> 
-          <h4 class="fw-bold">Bosco Hernández</h4>
-          <p>Redacción y presentación</p>
-          <div style="color: #191716; width: 65%; " class="badge text-wrap">
-            <p class="fw-light lh-sm fs14"> Redactor en el Diario de Navarra desde junio del 2021 hasta la actualidad.Interés en periodismo local e internacional, y en información deportiva. 
-              <a class="text-muted" href="https://www.linkedin.com/in/bosco-hern%C3%A1ndez-bba453208"><i class="bi bi-linkedin"></i></a>
+          <h4 class="fw-bold">Bosco Hernández <a class="text-muted" href="https://www.linkedin.com/in/bosco-hern%C3%A1ndez-bba453208"><i style="color: #191716;" class="bi bi-linkedin"></i></a></h4>
+          <p class="fst-italic">Redacción y presentación</p>
+          <div style="color: #191716; width: 240px;  " class="badge text-wrap">
+            <p class="fw-light lh-sm fs14"> 
+              Redactor en el Diario de Navarra desde junio del 2021. Interés en periodismo local e internacional, y en información deportiva. 
             </p>
           </div>
         </div>
@@ -158,62 +158,106 @@
           <img src="./images/Isabel_O.jpeg" class="bd-placeholder-img rounded-circle SizeProfilPhoto" alt="Foto de perfil"> 
           <h4 class="fw-bold">Isabel Ortiz <a class="text-muted" href="https://www.linkedin.com/in/isabel-ortiz-caballeros-a03270148"><i style="color: #191716;" class="bi bi-linkedin"></i></a></h4>
           <p class="fst-italic">Producción</p>
-          <div style="color: #191716; width: 220px; " class="badge text-wrap">
+          <div style="color: #191716; width: 240px; " class="badge text-wrap">
             <p class="fw-light lh-sm fs14">  
-              Editora y communication manager en la plataforma Tenet Ideas desde marzo 2020. 
-              Interés en periodismo investigativo y producción periodística.
+              Editora y community manager en la plataforma Tenet Ideas desde marzo 2020. 
+              Interés en periodismo investigativo y producción.
             </p>
           </div>
         </div>
         <!--#3-->
         <div class="col-lg-4">
-         <figure>
-          <img src="./images/Danna_V.jpeg" class="bd-placeholder-img rounded-circle SizeProfilPhoto" alt="Foto de perfil"> 
-          <h4 class="fw-bold"><a class="NoLink-B" href="https://www.linkedin.com/in/danna-varela-a4a06122b">Danna Varela</a></h4>
-          <p class="fs-5">Diseño de arte y producción digital</p>
-          <figcaption>
-            <div style="color: black; width: 65%; " class="badge text-wrap">
-              <p class="fw-light lh-sm fs14">  Editora y communication manager en la plataforma Tenet Ideas desde marzo 2020. Interés en periodismo investigativo y producción periodística.
-              </p>
-            </div>
-          </figcaption>
-         </figure>
+          <img src="./images/Danna_V.jpeg" class="bd-placeholder-img rounded-circle SizeProfilPhoto" alt="Foto de perfil">
+          <h4 class="fw-bold">Danna Varela
+            <a class="NoLink-B" href="https://www.linkedin.com/in/danna-varela-a4a06122b">
+              <i style="color: #191716;" class="bi bi-linkedin">
+              </i>
+            </a>
+          </h4>
+          <p class="fst-italic">Diseño de arte y producción digital</p>
+          <div style="color: #191716; width: 240px; " class="badge text-wrap">
+            <p class="fw-light lh-sm fs14">
+              Editora y community manager en la plataforma Tenet Ideas desde marzo 2020. Interés en periodismo investigativo y producción.
+            </p>
+          </div>
         </div>
         <!--#4-->
         <div class="col-lg-4">
           <img src="./images/Gabriela_B.jpeg" class="bd-placeholder-img rounded-circle SizeProfilPhoto" alt="Foto de perfil"> 
-          <h4>Gabriela Barreiro</h4>
-          <p>Redacción y presentación</p>
+          <h4 class="fw-bold">Gabriela Barreiro
+
+          </h4>
+          <p class="fst-italic">Redacción y presentación</p>
+          <div style="color: #191716; width: 240px; " class="badge text-wrap">
+            <p class="fw-light lh-sm fs14">
+              Info...
+            </p>
+          </div>
         </div>
         <!--#5-->
         <div class="col-lg-4">
           <img src="./images/Carolina_V.jpeg" class="bd-placeholder-img rounded-circle SizeProfilPhoto" alt="Foto de perfil"> 
-          <h4>Carolina Vásquez</h4>
-          <p>Directora</p>
+          <h4 class="fw-bold">Carolina Vásquez
+            <a class="NoLink-B" href="https://www.linkedin.com/in/carolinavasquezchinchilla/">
+              <i style="color: #191716;" class="bi bi-linkedin">
+              </i>
+            </a>
+          </h4>
+          <p class="fst-italic">Directora</p>
+          <div style="color: #191716; width: 240px; " class="badge text-wrap">
+            <p class="fw-light lh-sm fs14">
+              Editora de video y audio en CNN en Español. Antes, productora digital en WHAS-11 TV, RJI Student Fellow y reportera gráfica en el diario Columbia Missourian.
+            </p>
+          </div>
         </div>
         <!--#6-->
         <div class="col-lg-4">
           <img src="./images/Carlos_M.jpeg" class="bd-placeholder-img rounded-circle SizeProfilPhoto" alt="Foto de perfil"> 
-          <h4>Carlos Martul</h4>
-          <p>Producción</p>
+          <h4 class="fw-bold">Carlos Martul</h4>
+          <p class="fst-italic">Producción</p>
+          <div style="color: #191716; width: 240px; " class="badge text-wrap">
+            <p class="fw-light lh-sm fs14">
+              Info...
+            </p>
+          </div>
         </div>
         <!--#7-->
         <div class="col-lg-4">
           <img src="./images/Daniela_L.jpeg" class="bd-placeholder-img rounded-circle SizeProfilPhoto" alt="Foto de perfil"> 
-          <h4>Daniela de León</h4>
-          <p>Redacción</p>
+          <h4 class="fw-bold">Daniela de León
+            <a class="NoLink-B" href=" https://www.linkedin.com/in/danieladlz">
+              <i style="color: #191716;" class="bi bi-linkedin">
+              </i>
+            </a>
+          </h4>
+          <p class="fst-italic">Redacción</p>
+          <div style="color: #191716; width: 240px; " class="badge text-wrap">
+            <p class="fw-light lh-sm fs14">
+              Intercambio en la Universidad de Missouri, Estados Unidos (2021).  Creación de infográficos en el diario Columbia Missourian. Interés en los deportes y en la comunicación corporativa y política.
+            </p>
+          </div>
         </div>
         <!--#8-->
         <div class="col-lg-4">
           <img src="./images/Joaquín_L.jpeg" class="bd-placeholder-img rounded-circle SizeProfilPhoto" alt="Foto de perfil"> 
-          <h4>Joaquín Llosa</h4>
-          <p>Editor de vídeo y gráficos</p>
+          <h4 class="fw-bold">Joaquín Llosa</h4>
+          <p class="fst-italic">Editor de vídeo y gráficos</p>
+          <div style="color: #191716; width: 240px; " class="badge text-wrap">
+            <p class="fw-light lh-sm fs14">
+              Info...
+            </p>
+          </div>
         </div>
         <!--#9-->
         <div class="col-lg-4">
           <img src="./images/Ignacio_C.jpeg" class="bd-placeholder-img rounded-circle SizeProfilPhoto" alt="Foto de perfil"> 
-          <h4>Ignacio Crespo</h4>
-          <p>Redactor</p>
+          <h4 class="fw-bold">Ignacio Crespo</h4>
+          <p class="fst-italic">Redactor</p>
+          <div style="color: #191716; width: 240px; " class="badge text-wrap">
+            <p class="fw-light lh-sm fs14">
+              Info...
+            </p>
+          </div>
         </div>
       </div>
 
